[gd_scene load_steps=8 format=3 uid="uid://eo7j2g77qayc"]

[ext_resource type="Theme" uid="uid://dput70sdrayl" path="res://godot/tres/uiGlobalTheme.tres" id="1_614fo"]
[ext_resource type="FontFile" uid="uid://b3f6o2t3fsb05" path="res://external/font/RobotoCondensed-Light.ttf" id="2_txsll"]
[ext_resource type="Script" path="res://godot/scn/baseGame/gameMainMenu/userInterface/mainMenu/exit/uiMenuExit.gd" id="3_8ttlr"]
[ext_resource type="AudioStream" uid="uid://u57hkwqqf64b" path="res://external/aud/fx/select_007.ogg" id="4_5k3ou"]

[sub_resource type="Animation" id="Animation_f2c4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_twdhm"]
resource_name = "uiMenuExitHovered"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bkib"]
_data = {
"RESET": SubResource("Animation_f2c4x"),
"uiMenuExitHovered": SubResource("Animation_twdhm")
}

[node name="uiMenuExit" type="Button"]
offset_right = 50.0
offset_bottom = 32.0
mouse_filter = 2
theme = ExtResource("1_614fo")
theme_override_colors/font_color = Color(1, 1, 1, 0.392157)
theme_override_fonts/font = ExtResource("2_txsll")
theme_override_font_sizes/font_size = 15
text = "Exit"
flat = true
script = ExtResource("3_8ttlr")

[node name="uiMenuExitAnimation" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_5bkib")
}
autoplay = "uiMenuStartHighlight"

[node name="uiMenuExitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5k3ou")
bus = &"SFX Main"

[connection signal="mouse_entered" from="." to="." method="_whenMouseEnteredButton"]
[connection signal="mouse_exited" from="." to="." method="_whenMouseExitedButton"]
[connection signal="pressed" from="." to="." method="_whenMousePressed"]
